--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
@@ -139,6 +139,8 @@
     </div>
 </div>
 
+
+
 @section scripts {
     <script>
         var urlApi = '@curPath';
@@ -151,8 +153,8 @@
             $('.sponsor-id').val(id);
         }
         function delSponsor(id, name) {
-            $('.sponsor-del-id').val(id);
-            $('.sponsor-del-title').html("Delete Sponsor " + name);
+            $('#btn-del').val(id);
+            //$('.sponsor-del-title').html("Delete Sponsor " + name);
         }
 
         $(document).ready(function () {
@@ -184,7 +186,7 @@
                         name: "Function",
                         render: function (data, type, row) {
                             return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#sponsorModal" onclick="showModalSponsor(' + row.collectionItemID + ',\'' + row.name + '\', \'' + row.description + '\', \'' + row.imageUrl + '\')"><i class="fa fa-pencil"></i></button>     ' +
-                                '<button class="btn btn-danger btn-sm sponsor-id" data-toggle="modal" data-target="#deleteModal" onclick="delSponsor(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
+                                '<button id="btn-del" class="btn btn-danger btn-sm sponsor-id" onclick="delSponsor(' + row.collectionItemID + ',\'' + row.name + '\')"><i class="fa fa-trash"></i></button>';
                         }
                     }
                 ]
