--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @using HmsService.ViewModels;
 @model EventViewModel
 
-<div class="container-fluid">
+<div class="container-fluid" style="padding-top: 64px;">
     <div class="animated fadeIn">
         <div class="event-banner">
             <img class="event-banner-image" src="~/Content/img/new_statesman_events.jpg">
@@ -17,7 +17,7 @@
     <div class="animated fadeIn">
         <div class="card-content event-card-content">
             <div class="description p-10">
-                <h4 class="section-title">Introduction</h4>
+                <h4 class="section-title">Thông tin sự kiện</h4>
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="row">
