--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Livestream/Index.cshtml
@@ -9,7 +9,7 @@
 {
     if (Model.LivestreamUrl != null)
     {
-        <div class="videoWrapper">
+        <div class="videoWrapper" style="padding-top: 64px;">
             <iframe @*style="width:100%; height:100%;"*@ width="100%" height="100%" src="@(Model.LivestreamUrl)" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     }
