--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -7,7 +7,7 @@
     string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
 }
 
-<div class="container">
+<div class="container" style="padding-top: 64px;">
 
 
 
@@ -21,11 +21,11 @@
     else
     {
         <!-- Trigger the modal with a button -->
-        <button type="button" class="btn btn-info btn-post-question" data-toggle="modal" data-target="#myModal">Post Question</button>
+        <button type="button" class="btn btn-info btn-post-question" data-toggle="modal" data-target="#myModal">Đặt câu hỏi</button>
         <div class="col-md-12 col-xs-12">
             <div class="row">
-                <button type="button" class="btn btn-default btn-sm btn-lastest-question">Lastest Question</button> &nbsp;
-                <button type="button" class="btn btn-default btn-sm">Hotest Question</button>
+                <button type="button" class="btn btn-default btn-sm btn-lastest-question">Câu hỏi mới nhất</button> &nbsp;
+                <button type="button" class="btn btn-default btn-sm">Câu hỏi nổi bật</button>
             </div>
         </div>
         <div class="col-md-12 col-xs-12">
@@ -37,7 +37,7 @@
                             <span class="username-content">@(item.Username): @(item.QuestionContent)</span>
                             <p class="like-rep">
                                 <button id="btn-like-question-@(item.QuestionId)" class="btn btn-primary btn-sm btn-like-question" value="@(item.QuestionId)"><i class="fa fa-thumbs-o-up" aria-hidden="true"> </i> @(item.NumberOfLike)</button>
-                                <button value="@(item.QuestionId)" id="btn-reply" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
+                                <button value="@(item.QuestionId)" id="btn-reply" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Trả lời</button>
                             </p>
                             <span class="create-time">@(item.CreateTime)</span>
 
@@ -76,7 +76,7 @@
             <span class="username-content"></span>
             <p class="like-rep">
                 <button class="btn btn-primary btn-sm btn-like-question" value=""><i class="fa fa-thumbs-o-up" aria-hidden="true"> 0</i></button>
-                <button id="btn-reply" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
+                <button id="btn-reply" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Trả lời</button>
             </p>
             <span class="create-time"></span>
         </div>
@@ -108,24 +108,23 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Post Question</h4>
+                <h4 class="modal-title">Đặt câu hỏi</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>Input your name</label>
+                    <label>Tên người hỏi</label>
                     <input type="text" id="txtUsername" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label>Content</label>
+                    <label>Nội dung</label>
                     <textarea class="form-control" id="txtContent"></textarea>
                     <input type="hidden" id="new-question-id" />
                 </div>
-                <input type="checkbox" id="btnHiddenUser" /> Post with incognito
 
             </div>
             <div class="modal-footer">
-                <button id="btnSendQuestion" type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="btnSendQuestion" type="button" class="btn btn-primary" data-dismiss="modal">Gửi</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
 
@@ -140,24 +139,23 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Post Reply</h4>
+                <h4 class="modal-title">Trả lời</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>Input your name</label>
+                    <label>Tên người trả lời</label>
                     <input type="text" id="txtUsernameReply" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label>Content</label>
+                    <label>Nội dung</label>
                     <textarea class="form-control" id="txtContentReply"></textarea>
                     <input type="hidden" id="questionId" value="" />
                 </div>
-                <input type="checkbox" id="btnHiddenUser" /> Post with incognito
 
             </div>
             <div class="modal-footer">
-                <button id="btnSendReply" type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="btnSendReply" type="button" class="btn btn-primary" data-dismiss="modal">Gửi</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
             </div>
         </div>
 
