--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
     Layout = null;
-    string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
+    //string curPath = Request.Url.GetLeftPart(UriPartial.Authority) + Request.ApplicationPath;
+    int eventId = ViewBag.EventId;
 }
 
 <!DOCTYPE html>
@@ -46,24 +47,22 @@
             <span class="loader-block"></span>
         </div>
     </div>
-    
+
     <div class="limiter">
         <div class="container-login100 bubbles" style="background-image: url('../../Content/img/Pi5sTPQ.jpg');">
             <div class="wrap-login100 p-t-190 p-b-30">
                 <div class="login100-form validate-form" id="div-section">
-
-                    <div class="message-error">
-                        <h6>Code không đúng, vui lòng nhập lại</h6>
-                    </div>
-                    <div class="wrap-input100 validate-input m-b-10" data-validate="Vui Lòng Nhập Mã Tham Gia">
-                        <input value="22223333" class="input100" id="txt-code-login" type="text" name="pass" placeholder="Vui Lòng Nhập Mã Tham Gia">
-                    </div>
-
-                    <div class="container-login100-form-btn p-t-10">
-                        <button class="login100-form-btn" id="btn-check-code">
-                            Đăng nhập
-                        </button>
-                    </div>
+                    @{
+                        foreach (var session in Model)
+                        {
+                            <div class="container-login100-form-btn p-t-10">
+                                <a href="/Timeline/Index/@session.EventId/@session.SessionID" class="login100-form-btn" id="btn-session">@session.Name</a>
+                            </div>
+                        }
+                        <div class="container-login100-form-btn p-t-10">
+                            <a href="/Home/Index/@eventId" class="login100-form-btn" id="btn-session">Quay lại trang chủ</a>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
@@ -89,51 +88,48 @@
 
 </body>
 </html>
-<script>
-    $(document).ready(function () {
-        var urlApi = '@curPath';
-        
-        //Check Code
-        $('#btn-check-code').on('click', function () {
-            $('.container-loader').css('display', 'block');
-            var code = $('#txt-code-login').val();
-            if (code.length != 0) {
-                $.ajax({
-                    url: urlApi + 'api/login/CheckCodeLogin/' + code,
-                    method: "POST",
-                    success: function (data) {
-                        console.log(data);
-                        if (data.data != null) {
-                            $('.message-error').css('display', 'none');
-                            $('.container-loader').css('display', 'none');
-                            $('#txt-code-login').val("");
-                            //$('#div-section').empty();
-                            //for (var i = 0; i < data.data.length; i++) {
-                            //    var sectionTemplate = $('#session-template').clone();
-                            //    sectionTemplate.find('#btn-session').html(data.data[i].Name);
-                            //    sectionTemplate.find('#btn-session').attr('href', '/Home/Index/' + data.data[i].EventId + '/' + data.data[i].SessionID);
-                            //    $('#div-section').append(sectionTemplate.html());
-                            //}
-                            for (var i = 0; i < data.data.length; i++) {
-                                window.location.href = window.location.href + "Home/Index/" + data.data[i].EventId;
+@*<script>
+        $(document).ready(function () {
+            var urlApi = '@curPath';
+
+            //Check Code
+            $('#btn-check-code').on('click', function () {
+                $('.container-loader').css('display', 'block');
+                var code = $('#txt-code-login').val();
+                if (code.length != 0) {
+                    $.ajax({
+                        url: urlApi + 'api/login/CheckCodeLogin/' + code,
+                        method: "POST",
+                        success: function (data) {
+                            console.log(data);
+                            if (data.data != null) {
+                                $('.message-error').css('display', 'none');
+                                $('.container-loader').css('display', 'none');
+                                $('#txt-code-login').val("");
+                                $('#div-section').empty();
+                                for (var i = 0; i < data.data.length; i++) {
+                                    var sectionTemplate = $('#session-template').clone();
+                                    sectionTemplate.find('#btn-session').html(data.data[i].Name);
+                                    sectionTemplate.find('#btn-session').attr('href', '/Timeline/Index/' + data.data[i].EventId + '/' + data.data[i].SessionID);
+                                    $('#div-section').append(sectionTemplate.html());
+                                }
                             }
-                        }
-                        else {
+                            else {
+                                $('.message-error').css('display', 'block');
+                                $('#txt-code-login').val("");
+                                $('.container-loader').css('display', 'none');
+                            }
+                        },
+                        error: function (data) {
                             $('.message-error').css('display', 'block');
                             $('#txt-code-login').val("");
                             $('.container-loader').css('display', 'none');
+                            console.log(data);
                         }
-                    },
-                    error: function (data) {
-                        $('.message-error').css('display', 'block');
-                        $('#txt-code-login').val("");
-                        $('.container-loader').css('display', 'none');
-                        console.log(data);
-                    }
-                });
-            }
-            
-        });
+                    });
+                }
 
-    });
-</script>
+            });
+
+        });
+    </script>*@
