--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Sponsor/Index.cshtml
@@ -14,7 +14,7 @@
 }
 else
 {
-    <div class="row">
+    <div class="row" style="padding-top: 64px;">
         @{
             foreach (var sponsor in Model.CollectionItems)
             {
