--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
@@ -6,9 +6,9 @@
 
 @model IEnumerable<Timeline>
 
-<div class="container">
+<div class="container" style="padding-top: 64px;">
     <div class="page-header">
-        <h1 id="timeline">Timeline</h1>
+        <h1 id="timeline">Dòng thời gian</h1>
     </div>
     @if (Model.Count() == 0)
     {
