--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -177,7 +177,7 @@
                 //startDate: moment().startOf('hour'),
                 //endDate: moment().startOf('hour').add(32, 'hour'),
                 locale: {
-                    format: 'MM/DD/YYYY hh:mm A'
+                    format: 'DD/MM/YYYY hh:mm A'
                 }
             });
             //EventID, EventName, CodeLogin, StartTime, EndTime, Address, EventDescription, TemplateId, ImageURL
