--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
 
                         <div class="row">
                             <div class="col-sm-4 name-title">Time</div>
-                            <div class="col-sm-8 evtinfo">@Html.Raw(Model.StartTime)</div>
+                            <div class="col-sm-8 evtinfo">@Html.Raw(Model.StartTime.Value.ToString("dd/MM/yyyy hh:mm tt"))</div>
                         </div>
 
                         <div class="row">
