--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Timeline/Index.cshtml
@@ -6,8 +6,8 @@
 
 @model IEnumerable<Timeline>
 
-<div class="container" style="padding-top: 64px;">
-    <div class="page-header">
+<div class="container">
+    <div class="page-header" style="padding-top: 74px;">
         <h1 id="timeline">Dòng thời gian</h1>
     </div>
     @if (Model.Count() == 0)
