--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_LayoutEvent.cshtml
@@ -29,12 +29,20 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/Content/AdminLTE-master/dist/css/skins/_all-skins.min.css">
+    <!--Sweet Alert-->
+    <link rel="stylesheet" href="~/Content/bootstrap-sweetalert-master/dist/sweetalert.css">
+
+
     <!-- AdminLTE for demo purposes -->
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Content/AdminLTE-master/dist/js/adminlte.js"></script>
     <!-- date-range-picker -->
     <script src="~/Content/AdminLTE-master/bower_components/moment/moment.js"></script>
     <script src="~/Content/AdminLTE-master/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <!--Sweet Alert-->
+    <script src="~/Content/bootstrap-sweetalert-master/dist/sweetalert.min.js"></script>
+    <!--Sweet Alert-->
+    <script src="~/Content/Filestack/filestack.min.js"></script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
